<resources>
    <string name="app_name">SHRAMR</string>

    <string name="main_home">首页</string>
    <string name="water_meter">水表</string>
    <string name="electricity_meter">电表</string>
    <string name="gas_meter">燃气表</string>
    <string name="more" formatted="false">查看全部></string>

    <string name="water_meter2">水表：</string>
    <string name="electricity_meter2">电表：</string>
    <string name="gas_meter2">燃气表：</string>
    <string name="address">地址：</string>
    <string name="square">（单位：%s）</string>
    <string name="last_value">上次表值：</string>
    <string name="balance">表余额：</string>
    <string name="yuan">%s 美金</string>
    <string name="scan">扫码绑定</string>
    <string name="or">- 或 -</string>
    <string name="add">添加</string>
    <string name="sn_hints">手动输入表缴费号</string>
    <string name="binding">绑定</string>
    <string name="bind_sn_empty">缴费号不能为空</string>
    <string name="bind_success">绑定成功</string>
    <string name="bind_empty">表不存在</string>
    <string name="bind_already">此表已经绑定过了</string>
    <string name="bind_server_error">服务器出错</string>


    <string name="register_phone_title">验证手机</string>
    <string name="register_info_title">注册信息</string>
    <string name="reset_psw_title">重设密码</string>

    <string name="reset_modify_title">修改密码</string>
    <string name="register_info_psw_tip">*密码至少含一位数字与字母，且至少6位\n安全起见，建议密码不能设置过于简单</string>

    <string name="modify_password">修改密码</string>
    <string name="modify_language">切换语言</string>

    <string name="mine_per_storage_list">预存明细</string>
    <string name="mine_pay_list">缴费明细</string>
    <string name="mine_transaction_list">费用明细</string>
    <string name="monthly_list">月度明细</string>


    <string name="mine_person_info">个人资料</string>
    <string name="mine_scan_bill_info">扫码充值明细</string>

    <string name="mine_other_setting">其它设置</string>


    <string name="person_name">姓名</string>
    <string name="person_email">邮箱</string>
    <string name="person_phone">手机号</string>

    <string name="scan_code">扫码失败，请重试</string>
    <string name="permission_storage">存储权限</string>
    <string name="permission_camera">相机权限</string>
    <string name="language_cn">简体中文</string>
    <string name="language_en">English</string>
    <string name="language_km">ភាសាខ្មែរ</string>

    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="phone_number">请输入正确的手机号码</string>
    <string name="phone_number_error">手机号码为空</string>
    <string name="register_verify_code">验证码</string>
    <string name="register_verify_phone">%s-%s</string>
    <string name="register_next_step">下一步</string>
    <string name="register_count_time">%ss后重新发送</string>
    <string name="re_send_code">重新发送验证码</string>
    <string name="com_loading_tips">请稍后..</string>
    <string name="com_input_complete_tips">请填写完整个人信息</string>


    <string name="pay_sn">缴费号：</string>
    <string name="square_detail">单位：%s</string>

    <string name="water_meter_detail_title">水表详情</string>
    <string name="elect_meter_detail_title">电表详情</string>
    <string name="gas_meter_detail_title">燃气表详情</string>

    <string name="water_meter_reading">水表读数</string>
    <string name="elect_meter_reading">电表读数</string>
    <string name="gas_meter_reading">燃气表读数</string>

    <string name="water_meter_code">水表编码：</string>
    <string name="elect_meter_code">电表编码：</string>
    <string name="gas_meter_code">燃气表编码：</string>

    <string name="start_month_reading">月初读数</string>


    <string name="last_meter_value">本月用量</string>
    <string name="current_meter_value">即时数值</string>

    <string name="water_meter_balance">水表余额</string>
    <string name="elect_meter_balance">电表余额</string>
    <string name="gas_meter_balance">燃气表余额</string>

    <string name="immediately_save">立即预存</string>
    <string name="storage_detail" formatted="true">预存明细>></string>
    <string name="payment_detail" formatted="true">费用明细>></string>
    <string name="monthly_detail" formatted="true">月度明细>></string>

    <string name="unit_yuan">美金</string>

    <string name="cancel_binding">取消绑定</string>


    <string name="water_sn" formatted="false">水表编码：%s</string>
    <string name="electricity_sn" formatted="false">电表编码：%s</string>
    <string name="gas_sn" formatted="false">燃气表编码：%s</string>

    <string name="meter_sn" formatted="false">表编码：%s</string>



    <string name="measurement">缴费计量：%s</string>
    <string name="payment_time">缴费时间：%s</string>
    <string name="storage_time">预存时间：%s</string>
    <string name="recharge_time">充值时间：%s</string>



    <string name="payment_details">缴费明细：%s</string>
    <string name="pre_payment_balance">缴费前余额：%s</string>
    <string name="balance_after_payment">缴费后余额：%s</string>

    <string name="pre_charge_balance">充值前余额：%s</string>
    <string name="recharged_balance">充值后余额：%s</string>




    <string name="payed">已扣除</string>
    <string name="waited_payed">待扣除</string>

    <string name="no_pay" formatted="false">表余额不足\n待扣除%s美金</string>

    <string name="payment_money_title">预存金额</string>
    <string name="pay_action">支付</string>
    <string name="pay_hints">*请输入金额，预存金额支付成功后，不给予退款</string>
    <string name="pay_success">支付成功！</string>

    <!--2018.9.3-->
    <string name="completed">完成</string>
    <string name="person_password">密码</string>
    <string name="login">登录</string>
    <string name="to_register">立即注册</string>
    <string name="forget_psw">忘记密码?</string>
    <string name="china_local">中国大陆</string>
    <string name="phone_tip">手机号</string>
    <string name="send_code_finish">已发送验证码短信到</string>
    <string name="confirm_password">确认密码</string>
    <string name="submit">提交</string>
    <string name="request_data_error">数据请求出错</string>
    <string name="password_no_valid">密码不合法，请重新输入</string>
    <string name="password_no_match">前后密码不一致，请重新输入</string>
    <string name="login_invalid_tip">登录失效，请重新登录</string>
    <string name="login_out">退出登录</string>

    <string name="mine">我的</string>
    <string name="account_or_psw_invalid">账号或密码不合法</string>
    <string name="have_no_data">暂无数据</string>

    <string name="other_version_info">当前版本</string>
    <string name="act_ver_title">版本信息</string>
    <string name="act_ver_update_time">更新时间</string>
    <string name="act_ver_update_checking">版本检查中...</string>
    <string name="act_is_new_ver">当前已是最新版本</string>
    <string name="version_update_title">版本升级提示</string>
    <string name="version_update_tip">最新版本：</string>
    <string name="sure">确定</string>

    <string name="meter_unbind_hints">确定要解除绑定吗？</string>
    <string name="meter_bind_success">绑定成功</string>
    <string name="meter_unbind_success">解绑成功</string>

    <string name="scan_scan">充值</string>
    <string name="scan_meter_sn" formatted="false">表编码：%s</string>

    <string name="scan_meter_disabled">表已被停用，不能进行充值</string>
    <string name="scan_meter_fail">表异常，请联系管理员</string>
    <string name="scan_recharge">扫码充值</string>
    <string name="dialog_cancel">取消</string>
    <string name="dialog_yes">确定</string>
    <string name="cancel_download">取消下载</string>

    <string name="reg_hints">电话号码首位是”0“的电话号码，去掉”0“</string>
    <string name="meter_open">开</string>
    <string name="meter_close">关</string>
    <string name="auto_recharge">自助充值</string>
    <string name="recharge_hints">或者将下面二维码交给柜台充值人员</string>

    <string name="recharge_id">id：%s</string>
    <string name="recharge_room">房号：%s</string>
    <string name="recharge_balance">余额：%s 美金</string>
</resources>
