<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvSn"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:text="@string/water_sn" />

        <TextView
            android:id="@+id/tvPaymentDetail"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:text="@string/payment_details" />

        <TextView
            android:id="@+id/tvAfter"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:text="@string/balance_after_payment" />

        <TextView
            android:id="@+id/tvBefore"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:text="@string/pre_payment_balance" />

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payment_time" />


    </LinearLayout>

    <TextView
        android:id="@+id/tvMoney"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:layout_marginRight="15dp"
        android:gravity="center_vertical"
        android:text="2323"
        android:textSize="18sp" />
</LinearLayout>