<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvChinese"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/language_cn"
        android:textColor="@color/main_page_number_color"
        android:textSize="17sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5px"
        android:background="@color/normal_bg_color" />

    <TextView
        android:id="@+id/tvEnglish"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/language_en"
        android:textColor="@color/main_page_number_color"
        android:textSize="17sp" />
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5px"
        android:background="@color/normal_bg_color" />

    <TextView
        android:id="@+id/tvKm"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/language_km"
        android:textColor="@color/main_page_number_color"
        android:textSize="17sp" />
    <View
        android:layout_width="match_parent"
        android:layout_height="15px"
        android:background="@color/normal_bg_color" />

    <TextView
        android:id="@+id/tvCancel"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="@color/main_blue_color"
        android:textSize="17sp" />
</LinearLayout>