<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="100dp" android:layout_marginBottom="10dp">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="15dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/tvWaterSn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/water_sn" />

        <TextView
            android:id="@+id/tvSaveMeasure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvWaterSn"
            android:layout_marginTop="10dp"
            android:text="@string/measurement" />
        <TextView
            android:id="@+id/tvReChargeDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvSaveMeasure"
            android:layout_marginTop="10dp"
            android:text="@string/payment_time" />

        <TextView
            android:id="@+id/tvSaveMoney"
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"
            android:text="2323" />
        <TextView
            android:id="@+id/tvSaveHints"
            android:textColor="@color/text_color_green"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/tvSaveMoney"
            android:layout_marginRight="15dp"
            android:text="@string/payed" />
    </RelativeLayout>
</LinearLayout>