<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg_gray"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rlPreSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <TextView
            style="@style/text_Item_style"
            android:drawablePadding="10dp"
            android:drawableStart="@mipmap/yucun"
            android:text="@string/mine_per_storage_list" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/rlPayDes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            style="@style/text_Item_style"
            android:drawablePadding="10dp"
            android:drawableStart="@mipmap/jiaofei"
            android:text="@string/mine_pay_list" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlPersonInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            style="@style/text_Item_style"
            android:drawablePadding="10dp"
            android:drawableStart="@mipmap/ziliao"
            android:text="@string/mine_person_info" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlOtherSet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            style="@style/text_Item_style"
            android:drawablePadding="10dp"
            android:drawableStart="@mipmap/shezhi"
            android:text="@string/mine_other_setting" />
    </RelativeLayout>

</LinearLayout>