<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">

                <TextView
                    style="@style/detail_normal_text"
                    android:text="@string/pay_sn" />

                <TextView
                    android:id="@+id/tvSn"
                    style="@style/detail_normal_text"
                    android:text="234234342" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">

                <TextView
                    style="@style/detail_normal_text"
                    android:text="@string/address" />

                <TextView
                    android:id="@+id/tvAddress"
                    style="@style/detail_normal_text"
                    android:text="234234342" />
            </LinearLayout>


            <TextView
                android:id="@+id/tvUnit"
                style="@style/detail_normal_text"
                android:layout_marginBottom="8dp"
                android:text="@string/square_detail" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/divider_color" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"

                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvMeterName"
                    style="@style/detail_normal_text"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:text="@string/water_meter_reading" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/detail_normal_text"
                        android:layout_gravity="right"
                        android:text="@string/start_month_reading" />

                    <TextView
                        android:id="@+id/tvStartMonth"
                        style="@style/detail_normal_text"
                        android:layout_gravity="right"
                        android:layout_marginLeft="8dp" />
                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvLastValue"
                        style="@style/detail_normal_text"
                        android:text="432"
                        android:textSize="24dp"
                        android:textStyle="bold" />

                    <TextView
                        style="@style/detail_normal_text"
                        android:text="@string/last_meter_value" />

                    <TextView
                        android:id="@+id/tvLastDate"
                        style="@style/detail_normal_text"
                        android:text="2018-12-31 8:23" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvCurrentValue"
                        style="@style/detail_normal_text"
                        android:text="432"
                        android:textSize="24dp"
                        android:textStyle="bold" />

                    <TextView
                        style="@style/detail_normal_text"
                        android:text="@string/current_meter_value" />

                    <TextView
                        android:id="@+id/tvCurrentDate"
                        style="@style/detail_normal_text"
                        android:text="2018-12-31 8:23" />
                </LinearLayout>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:minHeight="200dp">

                <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/lineChart"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:paddingLeft="20dp"
                    android:paddingTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:paddingRight="20dp" />

                <TextView
                    android:id="@+id/tvNoData"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/have_no_data"
                    android:textColor="@color/text_gray"
                    android:textSize="16dp"
                    android:visibility="gone" />
            </RelativeLayout>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/divider_color" />

        <TextView
            android:id="@+id/tvBalance"
            style="@style/detail_normal_text"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:text="@string/water_meter_balance"
            android:textSize="16dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="bottom"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvMoney"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="top"
                android:text="3442"
                android:textColor="@color/normal_text_color"
                android:textSize="22dp"
                android:textStyle="bold" />

            <TextView
                style="@style/detail_normal_text"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="5dp"
                android:gravity="bottom"
                android:text="@string/unit_yuan" />
        </LinearLayout>


        <TextView
            android:id="@+id/tvCharge"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_below="@id/llPassword"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:background="@mipmap/anniu"
            android:gravity="center"
            android:text="@string/immediately_save"
            android:textColor="@color/white" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/tvGotoMonthBill"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/monthly_detail"
                android:textColor="@color/normal_text_item_color"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/tvGotoPayment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_gravity="center_horizontal"
                android:text="@string/payment_detail"
                android:textColor="@color/normal_text_item_color"
                android:textSize="16dp" />
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>
