<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg_gray"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvLoginOut"
        android:layout_width="300dp"
        android:layout_centerInParent="true"
        android:background="@mipmap/anniu"
        android:text="@string/login_out"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_height="45dp" />

    <LinearLayout
        android:layout_marginTop="15dp"
        android:id="@+id/llModifyPwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/text_Item_style"
            android:text="@string/modify_password" />

    </LinearLayout>

    <RelativeLayout
        android:layout_below="@id/llModifyPwd"
        android:id="@+id/llChangedLanguage"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp">

        <TextView
            style="@style/text_Item_style"
            android:text="@string/modify_language" />

        <TextView
            android:id="@+id/tvLanguage"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_marginRight="30dp"
            android:gravity="center_vertical"
            android:text="简体中文"
            android:textColor="@color/text_color" />
    </RelativeLayout>


</RelativeLayout>