<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_gas_view"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/llName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/cardViewTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gas_meter2" />

            <TextView
                android:id="@+id/tvMeterName"
                style="@style/cardViewTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="水表详细地址" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvOpen"
            style="@style/cardViewTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:textSize="16dp"
            android:text="@string/meter_open"/>

        <LinearLayout
            android:id="@+id/llAddress"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_below="@id/llName"
            android:orientation="horizontal">

            <TextView
                style="@style/cardViewTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address" />

            <TextView
                android:id="@+id/tvMeterAddress"
                style="@style/cardViewTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="50dp"
                android:text="水表详细水表详细地址水表详细地址水表详细地址水表详细地址水表详细地址地址" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/llAddress"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="bottom"
            android:layout_centerInParent="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvSquare"
                style="@style/cardViewTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="400"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvUnit"
                style="@style/cardViewTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/square" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/rlBottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">

            <TextView
                android:id="@+id/tvLastValueTitle"
                style="@style/cardViewTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_value" />

            <TextView
                android:id="@+id/tvLastValue"
                style="@style/cardViewTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/tvLastValueTitle"
                android:text="323" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:orientation="horizontal">
            <TextView
                android:id="@+id/tvBalanceTitle"
                style="@style/cardViewTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/balance" />

            <TextView
                android:id="@+id/tvBalanceValue"
                style="@style/cardViewTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="23424" />
            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>
</LinearLayout>