<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg_gray"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="15dp">

        <TextView
            style="@style/text_Item_style"
            android:drawableEnd="@null"
            android:text="@string/person_name" />

        <TextView
            android:id="@+id/tvUserName"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"
            android:gravity="center_vertical"
            android:text="我是谁"
            android:textColor="@color/text_color" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp">

        <TextView
            style="@style/text_Item_style"
            android:drawableEnd="@null"
            android:text="@string/person_email" />

        <TextView
            android:id="@+id/tvMail"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"
            android:gravity="center_vertical"
            android:text="gugu0097@mail.com"
            android:textColor="@color/text_color" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp">

        <TextView
            style="@style/text_Item_style"
            android:drawableEnd="@null"
            android:text="@string/person_phone" />

        <TextView
            android:id="@+id/tvPhone"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"
            android:gravity="center_vertical"
            android:text="15521153211"
            android:textColor="@color/text_color" />
    </RelativeLayout>
</LinearLayout>